--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,8 +31,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <script src="js/apimock.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/apimock.js" ></script>
+    <script type="text/javascript" src="js/apiclient.js"></script>
+    <script type="text/javascript" src="js/app.js" ></script>
 
 
 </head>
